JEDIT 4.1 VERSION HISTORY

* Version 4.1pre1

+ New Features

- Interilis syntax highlighting (Claude Eisenhut)
- Added SOCKS proxy support (Alfonso Garcia)
- WheelMouse plugin integrated into core -- no need to install a
  separate plugin to get wheel mouse scrolling under Java 2 version 1.4
- More intelligent highlighting of numbers. Instead of hard-coded
  heuteristic that only worked for C-like languages, numbers are now
  highlighted as follows:
  - A keyword consisting of only digits is automatically marked with the
    DIGIT token type.
  - If it has a mix of digits and letters, it is marked as DIGIT of it
    matches the regexp specified in the rule set's DIGIT_RE attribute.
    If this attribute is not set, then mixed sequences of digits and
    letters are not highlighted.
  - In Java mode, for example, the default value of this regexp is
    "(0x[[:xdigit:]]+|[[:digit:]]+)[lLdDfF]?".

+ Enhancements

- Updated printing code; uses Java 2 version 1.4 print dialogs when
  running on that Java version, and performs printing in a background
  thread (Thomas Dilts)
- MacOS plugin version 1.2 adds an option pane with a few settings, and
  some bug fixes and cleanups (Kris Kopicki)
- On Unix, the installer now defaults to installing in the user's home
  directory when running as a non-root user
- Updated PL-SQL mode (Steve Snider)
- A single invalid file system browser coloring regular expression no
  longer stops the remaining expressions from working
- HyperSearch now respects rectangular selections
- Search bar no longer takes up the full width of the view. This saves
  some screen space
- Status bar looks somewhat better now, and now shows the word wrap mode
  and line separator status
- The text color and style used to show the "[n lines]" string can now
  be set independently of the EOL marker color
- Bracket matching tweak (Alexander Maryanovsky)
- Plugin manager window can be closed by pressing Escape now
- Fixed indentation of constructs like:
  if(foo)