@@ -72,6 +72,9 @@
 <MODE NAME="eiffel"		FILE="eiffel.xml"
 				FILE_NAME_GLOB="*.e" />
 
+<MODE NAME="fortran"		FILE="fortran.xml"
+				FILE_NAME_GLOB="*.{f,for,fort,f77,f90}" />
+
 <MODE NAME="foxpro"		FILE="foxpro.xml"
 				FILE_NAME_GLOB="*.prg" />
 
@@ -162,7 +165,7 @@
                                 FILE_NAME_GLOB="*.pro" />
 
 <MODE NAME="progress"           FILE="progress.xml"
-                                FILE_NAME_GLOB="*.[piwf]" />
+                                FILE_NAME_GLOB="*.[piw]" />
 
 <MODE NAME="properties"		FILE="props.xml"
 				FILE_NAME_GLOB="*{properties,props}" />
