@@ -767,6 +767,7 @@ about.text=jEdit is brought to you by:\n\
 	Jim Wissner\n\
 	John Gellene\n\
 	Jonathan Revusky\n\
+	Joseph Schroer\n\
 	Juha Lindfors\n\
 	Kenrick Drew\n\
 	Kevin Burton\n\
